# traact_core

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md  build.py  conanfile.py
.github/workflows/: ci_workflow.yml  main.workflow.yml  releases.workflow.yml
apps/: CMakeLists.txt
apps/traactConsole/: CMakeLists.txt  traactConsole.cpp
include/: traact_core_export.h
include/traact/: config.h.in  datatypes.h  traact.h  traact_core_export.h  traact_export.h
include/traact/buffer/: BufferFactory.h  BufferSource.h  BufferTypeConversion.h  ComponentBuffer.cpp  ComponentBuffer.h  GenericBufferTypeConversion.h  GenericComponentBuffer.cpp  GenericComponentBuffer.h  GenericFactoryObject.h  GenericSourceTimeDomainBuffer.cpp  GenericSourceTimeDomainBuffer.h  GenericTimeDomainBuffer.cpp  GenericTimeDomainBuffer.h  SourceComponentBuffer.cpp  SourceComponentBuffer.h  SourceTimeDomainBuffer.cpp  SourceTimeDomainBuffer.h  TimeDomainBuffer.cpp  TimeDomainBuffer.h  TimeDomainManager.cpp  TimeDomainManager.h  TimeDomainMessageBuilder.h  TimeStepBuffer.cpp  TimeStepBuffer.h
include/traact/component/: Component.h  ComponentGraph.cpp  ComponentGraph.h  ComponentTypes.h  FilePlayer.cpp  FilePlayer.h  FileReader.cpp  FileReader.h  FileRecorder.h  FileWriter.cpp  FileWriter.h  ModuleComponent.h  PlayerBaseComponent.cpp  PlayerBaseComponent.h
include/traact/dataflow/: Network.h  TraactNetwork.h
include/traact/facade/: DefaultFacade.cpp  DefaultFacade.h  Facade.cpp  Facade.h  PluginFactory.cpp  PluginFactory.h  TraactPlugin.h
include/traact/pattern/: MetaPattern.cpp  MetaPattern.h  ParameterUtils.h  Pattern.cpp  Pattern.h  Port.cpp  Port.h
include/traact/serialization/: JsonGraphInstance.h  JsonPattern.h  JsonPatternInstance.h  JsonPort.h  JsonPortInstance.h  JsonSpatialPattern.h  JsonTimeDomainManagerConfig.h
include/traact/util/: CircularBuffer.h  FileUtil.cpp  FileUtil.h  Logging.cpp  Logging.h  PerformanceMonitor.cpp  PerformanceMonitor.h  RingBuffer.h  Semaphore.h  TraactCoreUtils.cpp  TraactCoreUtils.h  Utils.cpp  Utils.h  ValueWrapper.h
module_spatial/: CMakeLists.txt
module_spatial/src/traact/component/spatial/core/: MultiplicationComponent.cpp  MultiplicationComponent.h
module_spatial/src/traact/component/spatial/util/: Pose6DPrint.cpp  Pose6DPrint.h  Pose6DTestSource.cpp  Pose6DTestSource.h
module_spatial/src/traact/spatial/: spatialPlugin.cpp  spatialPlugin.h
module_test/include/traact/: DoubleType.h
src/buffer/: DefaultTimeDomainMessageBuilder.cpp  DefaultTimeDomainMessageBuilder.h  GenericTimeDomainBuffer.cpp  TimeDomainBuffer.cpp  TimeDomainManager.cpp  TimeDomainMessageBuilder.cpp
src/buffer/tbb/: TBBTimeDomainManager.cpp  TBBTimeDomainManager.h
src/component/: Component.cpp  ComponentGraph.cpp  ModuleComponent.cpp
src/dataflow/: Network.cpp
src/dataflow/intern/: DynamicJoinNode.h  NetworkGraph.cpp  NetworkGraph.h  SourceMergeNode.h  TBBTimeDomainManager.cpp  TBBTimeDomainManager.h  TraactComponentAsyncSource.cpp  TraactComponentAsyncSource.h  TraactComponentBase.h  TraactComponentFunctional.cpp  TraactComponentFunctional.h  TraactComponentSink.cpp  TraactComponentSink.h  TraactComponentSource.cpp  TraactComponentSource.h  TraactComponentSyncSink.cpp  TraactComponentSyncSink.h  TraactComponentSyncSource.cpp  TraactComponentSyncSource.h  TraactDataflowMessage.h
src/dataflow/tbb/: ComponentAsyncSink.cpp  ComponentAsyncSink.h  ComponentAsyncSource.cpp  ComponentAsyncSource.h  ComponentBase.h  ComponentFunctional.cpp  ComponentFunctional.h  ComponentSyncSink.cpp  ComponentSyncSink.h  ComponentSyncSource.cpp  ComponentSyncSource.h  DataflowMessage.h  DynamicJoinNode.h  NetworkGraph.cpp  NetworkGraph.h  SourceMergeNode.h
src/pattern/: CoordinateSystem.cpp  MetaPattern.cpp  ParameterUtils.cpp  Pattern.cpp  Port.cpp
src/pattern/instance/: GraphInstance.cpp  PatternInstance.cpp  PortInstance.cpp
src/pattern/spatial/: CoordinateSystem.cpp  SpatialPattern.cpp
src/serialization/: JsonGraphInstance.cpp  JsonPattern.cpp  JsonPatternInstance.cpp  JsonPort.cpp  JsonPortInstance.cpp  JsonSpatialPattern.cpp  JsonTimeDomainManagerConfig.cpp
src/traact/: config.h.in  datatypes.h  traact.cpp  traact.h  traact_core_export.h  traact_plugins.h
src/traact/buffer/: BufferUtils.h  ComponentBuffer.cpp  ComponentBuffer.h  DataBuffer.cpp  DataBuffer.h  DataBufferFactory.h  DataFactory.h  SourceComponentBuffer.cpp  SourceComponentBuffer.h  TimeDomainBuffer.cpp  TimeDomainBuffer.h  TimeStepBuffer.cpp  TimeStepBuffer.h
src/traact/component/: Component.cpp  Component.h  ComponentFactory.h  ComponentGraph.cpp  ComponentGraph.h  ComponentTypes.h  CudaComponent.cpp  CudaComponent.h  FilePlayer.cpp  FilePlayer.h  FileReader.cpp  FileReader.h  FileRecorder.h  FileWriter.cpp  FileWriter.h  GpuComponent.cpp  GpuComponent.h  ModuleComponent.cpp  ModuleComponent.h  PlayerBaseComponent.cpp  PlayerBaseComponent.h  generic_components.h
src/traact/dataflow/: Network.cpp  Network.h
src/traact/facade/: DefaultFacade.cpp  DefaultFacade.h  Facade.cpp  Facade.h  PluginFactory.h
src/traact/pattern/: CoordinateSystem.cpp  (+10 more)
src/util/: PerformanceMonitor.cpp  Utils.cpp
test/: CMakeLists.txt  test_main.cpp
test/simple_apps/: CreateObjectExperiment.cpp  RTTPluginTest.cpp
tests/: CMakeLists.txt  TestAsyncSourceComponent.cpp  TestAsyncSourceComponent.h  TestComponentState.cpp  TestComponentState.h  TestComponents.cpp  TestComponents.h  TestDatatypes.cpp  TestDatatypes.h  TestSyncFunctionalComponent.cpp  TestSyncFunctionalComponent.h  TestSyncSinkComponent.cpp  TestSyncSinkComponent.h  main.cpp  test_main.cpp
tests/buffer/: SingleComponentBufferTest.cpp
tests/dataflow/: DataflowMessageReceiver.cpp  DataflowMessageReceiver.h  SourceSink.cpp  Test_00_SourceSink.cpp  Test_01_TwoAsyncSource_SyncFunctional_SyncSink.cpp  Test_DynamicJoinNode.cpp
tests/dataflow/taskflow/: Test_TimeDomainClock.cpp
tests/dataflow/tbb/: DataflowMessageReceiver.cpp  DataflowMessageReceiver.h  Test_DynamicJoinNode.cpp
tests/pattern/: test_serialization.cpp
unused/: ci_workflow_build_and_deploy.yml
(+215 files in other folders)
